# living-archive

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  agents.md  dashboard.html  haptic.html  implementation-plan.md  living-archive-playground.html  open-questions.md  project-brief.md  pyproject.toml  review.html  tokens.css
_dev/: council-face-recognition-2026-02-06.md  dev-log.md  migrate_metadata.py  personal-cloud-data-retrieval.md  plan-bilingual-api.md  resize_temp.py  resolved-decisions.md  run-log.md
deploy/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  setup-vps.sh  sync.sh
docs/: architecture.md  mneme-mount-recovery.md  open-questions.md  reference-projects.md
experiments/: EXPERIMENTS.md
prompts/: document_analysis_v1.txt  document_analysis_v2.txt  photo_analysis_v1.txt
src/: analyze.py  ask.py  audit_tags.py  auth.py  catalog.py  catalog_cli.py  catalog_refresh.py  config.py  contact_triage.py  convert.py  cost.py  dashboard.py  dashboard_api.py  dedup_report.py  discover.py  doc_analyze.py  doc_extract_text.py  doc_index.py  doc_manifest.py  doc_scan.py  haptic_api.py  immich.py  manifest.py  maxplan.py  migrate_local.py  models.py  people.py  person_clusters.json  pipeline.py  preflight.py  review.py  review_models.py  run_batch.py  run_doc_extract.py  run_slice.py  sync_people.py  synthesis.py  synthesis_queries.py  tokens.py  translations.py
tests/: conftest.py  test_analyze.py  test_auth.py  test_convert.py  test_dashboard_api_people.py  test_immich.py  test_manifest.py  test_models.py  test_people.py  (+5 more)
(+212 files in other folders)
